--- a/web/src/assets/styles/resources/yct.scss
+++ b/web/src/assets/styles/resources/yct.scss
@@ -173,7 +173,7 @@
 }
 
 .el-table thead.is-group th.el-table__cell{
-  background:#173067;
+  background:#173067 !important;
 }
 .el-table--border th.el-table__cell{
   border-bottom:1px solid #173067;
