--- a/web/src/assets/styles/resources/yct.scss
+++ b/web/src/assets/styles/resources/yct.scss
@@ -261,7 +261,7 @@
 /**
 这里是控制 布局的start
  */
-//
+
 //.mine-aside{
 //  width: 0;
 //  display: none;
@@ -269,9 +269,9 @@
 //.mine-bars{
 //  display: none;
 //}
-//.mine-main{
-//  background-color: #020e2f !important;
-//}
+.mine-main{
+  background-color: #020e2f !important;
+}
 
 /*
   布局 end
